[WIP] functionalise and refactor euclidean distance calculations

--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -240,7 +240,7 @@
     "    print(\n",
     "        f\"percentage shift in {column} between {sample1} and {sample2}: {percentage_shift_value:.2f}%. Average type: {average_type}.\\n\"\n",
     "        f\"Distribution info: ({avg_str})\"\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
@@ -488,7 +488,6 @@
     "    ax.grid(True)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
-    "\n",
     "\n",
     "\n",
     "# number of DNA segments vs display name\n",
@@ -806,7 +805,9 @@
     "tpv_min = grains_df[\"total_protein_volume\"].min()\n",
     "\n",
     "for display_name in display_names:\n",
-    "    display_name_data = grains_centroid_diffs_protein_only_df[grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name]\n",
+    "    display_name_data = grains_centroid_diffs_protein_only_df[\n",
+    "        grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name\n",
+    "    ]\n",
     "\n",
     "    # normalise the TBL and TPV values and add to new columns\n",
     "    grains_centroid_diffs_protein_only_df.loc[\n",
@@ -818,6 +819,7 @@
     "        \"total_protein_volume_normalised\",\n",
     "    ] = (grains_centroid_diffs_protein_only_df[\"total_protein_volume\"] - tpv_min) / (tpv_max - tpv_min)\n",
     "\n",
+    "\n",
     "# now for each sample calculate the centroid of the TBL and TPV values and then create a new column with the euclidean distance for each grain\n",
     "def euclidean_distance(x: np.ndarray, y: np.ndarray) -> float:\n",
     "    \"\"\"\n",
@@ -826,7 +828,7 @@
     "    Parameters\n",
     "    ----------\n",
     "    x : np.ndarray\n",
-    "        The first point.\n",
+    "        The first point\n",
     "    y : np.ndarray\n",
     "        The second point.\n",
     "\n",
@@ -837,12 +839,15 @@
     "    \"\"\"\n",
     "    return np.sqrt(np.sum((x - y) ** 2))\n",
     "\n",
+    "\n",
     "# plot scatter plots of post-nomalisation TBL vs TPV for each sample, in a grid\n",
     "plot_cols = 3\n",
     "plot_rows = int(np.ceil(len(display_names) / plot_cols))\n",
     "plt.figure(figsize=(plot_cols * 5, plot_rows * 5))\n",
     "for i, display_name in enumerate(display_names):\n",
-    "    display_name_data = grains_centroid_diffs_protein_only_df[grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name]\n",
+    "    display_name_data = grains_centroid_diffs_protein_only_df[\n",
+    "        grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name\n",
+    "    ]\n",
     "    ax = plt.subplot(plot_rows, plot_cols, i + 1)\n",
     "    # scatterplot\n",
     "    sns.scatterplot(\n",
@@ -866,7 +871,9 @@
     "grains_centroid_diffs_protein_only_df[\"tbl_tpv_euclidean_distance\"] = np.nan\n",
     "# for each display name, calculate the centroid of the TBL and TPV values\n",
     "for display_name in display_names:\n",
-    "    display_name_data = grains_centroid_diffs_protein_only_df[grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name]\n",
+    "    display_name_data = grains_centroid_diffs_protein_only_df[\n",
+    "        grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name\n",
+    "    ]\n",
     "    # get the centroid of the TBL and TPV values\n",
     "    tbl_centroid = display_name_data[\"total_branch_lengths_normalised\"].mean()\n",
     "    tpv_centroid = display_name_data[\"total_protein_volume_normalised\"].mean()\n",
@@ -879,6 +886,38 @@
     "    grains_centroid_diffs_protein_only_df.loc[\n",
     "        grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name, \"tbl_tpv_euclidean_distance\"\n",
     "    ] = euclidean_distances\n",
+    "\n",
+    "\n",
+    "# turn this to a function\n",
+    "def euclidean_distance_from_centroid(df: pd.DataFrame, col1: str, col2: str) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Calculate the Euclidean distance from the centroid for each row in the DataFrame.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Normalise the columns values across all samples\n",
+    "    col1_max = df[col1].max()\n",
+    "    col1_min = df[col1].min()\n",
+    "    col2_max = df[col2].max()\n",
+    "    col2_min = df[col2].min()\n",
+    "\n",
+    "    df[f\"{col1}_normalised\"] = (df[col1] - col1_min) / (col1_max - col1_min)\n",
+    "    df[f\"{col2}_normalised\"] = (df[col2] - col2_min) / (col2_max - col2_min)\n",
+    "\n",
+    "    # iterate over each display name\n",
+    "    for display_name in df[\"display_name\"].unique():\n",
+    "        display_name_data = df[df[\"display_name\"] == display_name]\n",
+    "        # get the centroid of the TBL and TPV values\n",
+    "        col1_centroid = display_name_data[f\"{col1}_normalised\"].mean()\n",
+    "        col2_centroid = display_name_data[f\"{col2}_normalised\"].mean()\n",
+    "        # calculate the euclidean distance for each grain\n",
+    "        euclidean_distances = np.sqrt(\n",
+    "            (display_name_data[f\"{col1}_normalised\"] - col1_centroid) ** 2\n",
+    "            + (display_name_data[f\"{col2}_normalised\"] - col2_centroid) ** 2\n",
+    "        )\n",
+    "        # add to the new column\n",
+    "        df.loc[df[\"display_name\"] == display_name, f\"{col1}_{col2}_euclidean_distance\"] = euclidean_distances\n",
+    "    return df\n",
+    "\n",
     "\n",
     "# plot the euclidean distance vs display name as a strip plot\n",
     "plt.figure()\n",
@@ -939,7 +978,7 @@
     "plt.yticks(rotation=0)\n",
     "plt.xticks(rotation=90)\n",
     "simpleticks_x_y()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
