Also add total  contour length as a length measurement though less reliable it seems due to smoothing.

--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -30,6 +30,9 @@
     "all_disordered_segments_file = base_dir / \"output-data-redo\" / \"all_disordered_segment_statistics.csv\"\n",
     "assert all_disordered_segments_file.exists()\n",
     "all_disordered_segments_df = pd.read_csv(all_disordered_segments_file)\n",
+    "all_molstats_file = base_dir / \"output-data-redo\" / \"all_mol_statistics.csv\"\n",
+    "assert all_molstats_file.exists()\n",
+    "all_molstats_df = pd.read_csv(all_molstats_file)\n",
     "\n",
     "images_to_delete = [\n",
     "    \"20250502_5nMTRF2_1ng_tel12picozEE_nicl.0_00010\",\n",
@@ -47,6 +50,9 @@
     "    ]\n",
     "    len_after = len(all_disordered_segments_df)\n",
     "    assert len_before - len_after > 0\n",
+    "    len_before = len(all_molstats_df)\n",
+    "    all_molstats_df = all_molstats_df[~all_molstats_df[\"image\"].str.contains(image_name)]\n",
+    "    len_after = len(all_molstats_df)\n",
     "    print(f\"removed {image_name} from all stats and all disordered segments\")\n",
     "\n",
     "# create a display name column\n",
@@ -58,6 +64,7 @@
     "all_stats_df[\"smallest_bounding_area\"] /= 1e-18\n",
     "all_stats_df[\"area\"] /= 1e-18\n",
     "all_stats_df[\"height_median\"] /= 1e-9\n",
+    "all_stats_df[\"total_contour_length\"] /= 1e-9\n",
     "\n",
     "boxplotcolour = \"lightgrey\"\n",
     "\n",
@@ -305,11 +312,15 @@
     "        disordered_segment_data = all_disordered_segments_df[all_disordered_segments_df[\"image\"] == image]\n",
     "        disordered_segment_data = disordered_segment_data[disordered_segment_data[\"grain_number\"] == grain_number]\n",
     "\n",
+    "        molstats_data = all_molstats_df[all_molstats_df[\"image\"] == image]\n",
+    "        molstats_data = molstats_data[molstats_data[\"grain_number\"] == grain_number]\n",
+    "\n",
     "        # get important stats\n",
     "        branch_distances = disordered_segment_data[\"branch_distance\"]\n",
     "        mean_branch_distance = branch_distances.mean()\n",
     "        # tbl is the same for all subgrains since it's the total, and just repeated for each row of the grain\n",
     "        tbl = grain_data[\"total_branch_lengths\"].values[0]\n",
+    "        tcl = grain_data[\"total_contour_length\"].values[0]\n",
     "        # total protein volume is just the total of all the class 2 volumes for the grain\n",
     "        total_protein_volume = grain_data[grain_data[\"class_number\"] == 2][\"volume\"].sum()\n",
     "        total_protein_area = grain_data[grain_data[\"class_number\"] == 2][\"area\"].sum()\n",
@@ -329,6 +340,7 @@
     "                \"num_protein_segments\": num_protein_segments,\n",
     "                \"mean_branch_distance\": mean_branch_distance,\n",
     "                \"total_branch_lengths\": tbl,\n",
+    "                \"total_contour_length\": tcl,\n",
     "                \"total_protein_volume\": total_protein_volume,\n",
     "                \"total_dna_volume\": total_dna_volume,\n",
     "                \"total_grain_volume\": total_protein_volume + total_dna_volume,\n",
@@ -385,6 +397,30 @@
     "plt.ylabel(\"total branch lengths (nm)\")\n",
     "plt.xlabel(\"sample type\")\n",
     "plt.title(\"total branch lengths for grains with protein\")\n",
+    "simpleticks()\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot TCL vs display_name for only grains with protein\n",
+    "plt.figure()\n",
+    "# stripplot with violins\n",
+    "sns.violinplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_contour_length\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=boxplotcolour,\n",
+    "    order=sample_order,\n",
+    ")\n",
+    "sns.stripplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_contour_length\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=\"black\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.ylabel(\"total contour length (nm)\")\n",
+    "plt.xlabel(\"sample type\")\n",
+    "plt.title(\"total contour length for grains with protein\")\n",
     "simpleticks()\n",
     "plt.show()\n",
     "\n",
