incoroporate all_statistics.csv into the grain dictionary

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -9,10 +9,12 @@
    "source": [
     "import pickle\n",
     "from pathlib import Path\n",
+    "import re\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import seaborn as sns\n",
     "\n",
     "from AFMReader.topostats import load_topostats\n",
     "\n",
@@ -104,7 +106,7 @@
     "\n",
     "\n",
     "random_values = np.random.rand(100)\n",
-    "plot_line_coloured(random_values)\n",
+    "# plot_line_coloured(random_values)\n",
     "\n",
     "\n",
     "def defect_stats(\n",
@@ -136,6 +138,16 @@
     "# load the images\n",
     "topo_files = list(processed_dir.glob(\"**/*.topostats\"))\n",
     "print(f\"found {len(topo_files)} topostats files\")\n",
+    "\n",
+    "# load the corresponding stats csv\n",
+    "all_stats_csv = processed_dir / \"all_statistics.csv\"\n",
+    "assert all_stats_csv.exists()\n",
+    "all_stats_df = pd.read_csv(all_stats_csv)\n",
+    "print(all_stats_df.columns)\n",
+    "\n",
+    "all_stats_df[\"total_contour_length\"] /= 1e-9\n",
+    "\n",
+    "\n",
     "# all_data = {}\n",
     "# for topo_file in topo_files:\n",
     "#     file_data = load_topostats(topo_file)\n",
@@ -166,7 +178,11 @@
    "outputs": [],
    "source": [
     "def construct_grains_dictionary(\n",
-    "    file_list: list, bbox_padding: int, stop_at_index: int | None = None, plot: bool = False\n",
+    "    file_list: list,\n",
+    "    bbox_padding: int,\n",
+    "    all_stats_df: pd.DataFrame,\n",
+    "    stop_at_index: int | None = None,\n",
+    "    plot: bool = False,\n",
     "):\n",
     "    grains_dictionary: dict[any] = {}\n",
     "\n",
@@ -184,13 +200,30 @@
     "            except KeyError:\n",
     "                nodestats_data = None\n",
     "\n",
+    "            # get the corresponding image rows from the stats csv\n",
+    "            all_stats_image = all_stats_df[all_stats_df[\"image\"] == filename]\n",
+    "            print(f\"found {len(all_stats_image)} rows in stats csv for {filename}\")\n",
+    "\n",
     "            # print(f\"getting data from {filename}\")\n",
     "            image = file_data[\"image\"]\n",
     "            ordered_trace_data = file_data[\"ordered_traces\"][\"above\"]\n",
+    "\n",
     "            for current_grain_index, grain_ordered_trace_data in ordered_trace_data.items():\n",
+    "\n",
+    "                grain_index_int = re.sub(r\"grain_\", \"\", current_grain_index)\n",
+    "                grain_index_int = int(grain_index_int)\n",
+    "                all_stats_grain = all_stats_image[all_stats_image[\"grain_number\"] == grain_index_int]\n",
+    "                # grab quantities from the stats csv\n",
+    "                smallest_bounding_area = all_stats_grain[\"smallest_bounding_area\"].values[0]\n",
+    "                aspect_ratio = all_stats_grain[\"aspect_ratio\"].values[0]\n",
+    "                total_contour_length = all_stats_grain[\"total_contour_length\"].values[0]\n",
+    "                num_crossings = all_stats_grain[\"num_crossings\"].values[0]\n",
+    "\n",
     "                # print(f\"  grain {current_grain_index}\")\n",
     "                grains_dictionary[grain_index] = {}\n",
     "                grains_dictionary[grain_index][\"molecule_data\"] = {}\n",
+    "\n",
+    "                # all_stats_grain = all_stats_image[all_stats_image[\"\"]]\n",
     "\n",
     "                for current_molecule_index, molecule_ordered_trace_data in grain_ordered_trace_data.items():\n",
     "                    molecule_data = {}\n",
@@ -200,7 +233,6 @@
     "                    molecule_data[\"circular\"] = molecule_ordered_trace_data[\"mol_stats\"][\"circular\"]\n",
     "                    bbox = molecule_ordered_trace_data[\"bbox\"]\n",
     "                    print(f\"  grain {current_grain_index} molecule {current_molecule_index} bbox {bbox}\")\n",
-    "                    grains_dictionary[grain_index][\"molecule_data\"][current_molecule_index] = molecule_data\n",
     "\n",
     "                    splining_coords = file_data[\"splining\"][\"above\"][current_grain_index][current_molecule_index][\n",
     "                        \"spline_coords\"\n",
@@ -234,6 +266,8 @@
     "                    ordered_coords[:, 1] -= added_left\n",
     "                    molecule_data[\"ordered_coords\"] = ordered_coords\n",
     "\n",
+    "                    grains_dictionary[grain_index][\"molecule_data\"][current_molecule_index] = molecule_data\n",
+    "\n",
     "                image_crop = image[\n",
     "                    bbox_padded[0] : bbox_padded[2],\n",
     "                    bbox_padded[1] : bbox_padded[3],\n",
@@ -242,6 +276,10 @@
     "                grains_dictionary[grain_index][\"image\"] = image_crop\n",
     "                grains_dictionary[grain_index][\"full_image\"] = image\n",
     "                grains_dictionary[grain_index][\"bbox\"] = bbox_padded\n",
+    "                grains_dictionary[grain_index][\"aspect_ratio\"] = aspect_ratio\n",
+    "                grains_dictionary[grain_index][\"smallest_bounding_area\"] = smallest_bounding_area\n",
+    "                grains_dictionary[grain_index][\"total_contour_length\"] = total_contour_length\n",
+    "                grains_dictionary[grain_index][\"num_crossings\"] = num_crossings\n",
     "                grains_dictionary[grain_index][\"added_left\"] = added_left\n",
     "                grains_dictionary[grain_index][\"added_top\"] = added_top\n",
     "                grains_dictionary[grain_index][\"padding\"] = bbox_padding\n",
@@ -313,7 +351,9 @@
     "    return grains_dictionary\n",
     "\n",
     "\n",
-    "grains_dictionary = construct_grains_dictionary(topo_files, bbox_padding=20, stop_at_index=None, plot=False)"
+    "grains_dictionary = construct_grains_dictionary(\n",
+    "    topo_files, bbox_padding=20, all_stats_df=all_stats_df, stop_at_index=None, plot=False\n",
+    ")"
    ]
   },
   {
@@ -326,16 +366,16 @@
     "defect_stats_dir = postprocess_dir / \"defect_stats\"\n",
     "defect_stats_dir.mkdir(exist_ok=True)\n",
     "\n",
-    "interval_nm = 2 # nm\n",
-    "curvature_average_window_nm = 10 # nm\n",
+    "interval_nm = 2  # nm\n",
+    "curvature_average_window_nm = 10  # nm\n",
     "curvature_rolling_window_size = int(curvature_average_window_nm / interval_nm)\n",
     "\n",
-    "curvature_threshold_radpernm = 0.15 # radians/nm\n",
-    "height_threshold_nm = 2.0 # nm\n",
+    "curvature_threshold_radpernm = 0.15  # radians/nm\n",
+    "height_threshold_nm = 2.0  # nm\n",
     "\n",
     "total_index_to_stop_at = 10000\n",
     "\n",
-    "coindicing_defect_distance_threshold_nm = 10 # nm\n",
+    "coindicing_defect_distance_threshold_nm = 10  # nm\n",
     "\n",
     "grains_defects_dictionary = {}\n",
     "defect_stats_list = []\n",
@@ -468,6 +508,10 @@
     "        defect_stats_list.append(\n",
     "            {\n",
     "                \"grain_index\": grain_index,\n",
+    "                \"smallest_bounding_area\": grain_data[\"smallest_bounding_area\"],\n",
+    "                \"aspect_ratio\": grain_data[\"aspect_ratio\"],\n",
+    "                \"total_contour_length\": grain_data[\"total_contour_length\"],\n",
+    "                \"num_crossings\": grain_data[\"num_crossings\"],\n",
     "                \"molecule_index\": molecule_index,\n",
     "                \"num_curvature_defects\": num_curvature_defects,\n",
     "                \"num_height_defects\": num_height_defects,\n",
@@ -580,7 +624,8 @@
     "defect_stats_df[\"num_coinciding_defects\"].hist()\n",
     "plt.xlabel(\"Number of Coinciding Defects\")\n",
     "plt.ylabel(\"Count\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
    ]
   }
  ],
