Check contour length distributions (good)

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -625,7 +625,33 @@
     "plt.xlabel(\"Number of Coinciding Defects\")\n",
     "plt.ylabel(\"Count\")\n",
     "plt.show()\n",
-    "\n"
+    "\n",
+    "# plot aspect ratio against number of defects as a scatter\n",
+    "defect_stats_df.plot.scatter(\n",
+    "    x=\"aspect_ratio\",\n",
+    "    y=\"num_curvature_defects\",\n",
+    ")\n",
+    "plt.xlabel(\"Aspect Ratio\")\n",
+    "plt.ylabel(\"Number of Curvature Defects\")\n",
+    "plt.show()\n",
+    "defect_stats_df.plot.scatter(\n",
+    "    x=\"aspect_ratio\",\n",
+    "    y=\"num_height_defects\",\n",
+    ")\n",
+    "plt.xlabel(\"Aspect Ratio\")\n",
+    "plt.ylabel(\"Number of Height Defects\")\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure()\n",
+    "sns.stripplot(data=defect_stats_df, y=\"total_contour_length\", color=\"black\", alpha=0.5)\n",
+    "# violin\n",
+    "sns.violinplot(\n",
+    "    data=defect_stats_df,\n",
+    "    y=\"total_contour_length\",\n",
+    "    color=\"lightgrey\",\n",
+    ")\n",
+    "plt.ylabel(\"Total Contour Length (nm)\")\n",
+    "plt.show()"
    ]
   }
  ],
