add dosage support

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -42,10 +42,10 @@
     "\n",
     "\n",
     "def plot_line_coloured(\n",
-    "    intensity_ys: npt.NDArray[np.float_],\n",
-    "    intensity_xs: npt.NDArray[np.float_] | None = None,\n",
-    "    image: npt.NDArray[np.float_] | None = None,\n",
-    "    xy_coords: npt.NDArray[np.float_] | None = None,\n",
+    "    intensity_ys: npt.NDArray[np.float64],\n",
+    "    intensity_xs: npt.NDArray[np.float64] | None = None,\n",
+    "    image: npt.NDArray[np.float64] | None = None,\n",
+    "    xy_coords: npt.NDArray[np.float64] | None = None,\n",
     "    figsize: tuple[int, int] = (20, 8),\n",
     "):\n",
     "    \"\"\"\n",
@@ -129,14 +129,14 @@
     "base_dir = Path(\"/Users/sylvi/topo_data/picoz\")\n",
     "assert base_dir.exists()\n",
     "\n",
-    "processed_dir = base_dir / \"output_trained_on\"\n",
+    "processed_dir = base_dir / \"output_abs_thresh\"\n",
     "assert processed_dir.exists()\n",
     "\n",
     "postprocess_dir = base_dir / \"postprocess\"\n",
     "postprocess_dir.mkdir(exist_ok=True)\n",
     "\n",
     "# load the images\n",
-    "topo_files = list(processed_dir.glob(\"**/*.topostats\"))\n",
+    "topo_files = list(processed_dir.glob(\"*/**/*.topostats\"))\n",
     "print(f\"found {len(topo_files)} topostats files\")\n",
     "\n",
     "# load the corresponding stats csv\n",
@@ -214,6 +214,22 @@
     "                grain_index_int = int(grain_index_int)\n",
     "                all_stats_grain = all_stats_image[all_stats_image[\"grain_number\"] == grain_index_int]\n",
     "                # grab quantities from the stats csv\n",
+    "                # grab the basename, and check that theyre all the same for this grain\n",
+    "                basename = all_stats_grain[\"basename\"].values[0]\n",
+    "                print(f\"basename for grain {current_grain_index} in file {filename}: {basename}\")\n",
+    "                if pd.isna(basename):\n",
+    "                    print(f\"skipping grain {current_grain_index} in file {filename} because basename is NaN\")\n",
+    "                    continue\n",
+    "                if not all(all_stats_grain[\"basename\"].values == basename):\n",
+    "                    raise ValueError(\n",
+    "                        f\"basename mismatch for grain {current_grain_index} in file {filename}: {all_stats_grain['basename'].values}\"\n",
+    "                    )\n",
+    "                # dose is stored in the folder name in basename. it'll be to the right of the last forward slash, in\n",
+    "                # the format \"dose_XGY\" where X is the dose value\n",
+    "                dose_match = re.search(r\"dose_(\\d+\\.?\\d*)\", basename)\n",
+    "                assert dose_match is not None, f\"could not find dose in basename {basename}\"\n",
+    "                dose = float(dose_match.group(1))\n",
+    "                # if basename is nan, skip grain\n",
     "                smallest_bounding_area = all_stats_grain[\"smallest_bounding_area\"].values[0]\n",
     "                aspect_ratio = all_stats_grain[\"aspect_ratio\"].values[0]\n",
     "                total_contour_length = all_stats_grain[\"total_contour_length\"].values[0]\n",
@@ -273,6 +289,8 @@
     "                    bbox_padded[1] : bbox_padded[3],\n",
     "                ]\n",
     "                full_grain_mask = file_data[\"grain_tensors\"][\"above\"]\n",
+    "                grains_dictionary[grain_index][\"basename\"] = basename\n",
+    "                grains_dictionary[grain_index][\"dose\"] = dose\n",
     "                grains_dictionary[grain_index][\"image\"] = image_crop\n",
     "                grains_dictionary[grain_index][\"full_image\"] = image\n",
     "                grains_dictionary[grain_index][\"bbox\"] = bbox_padded\n",
@@ -379,6 +397,12 @@
     "\n",
     "grains_defects_dictionary = {}\n",
     "defect_stats_list = []\n",
+    "\n",
+    "# create dosage plotting subdirectories\n",
+    "for dose in sorted(set(grain_data[\"dose\"] for grain_data in grains_dictionary.values())):\n",
+    "    dose_dir = defect_stats_dir / f\"{dose}GY\"\n",
+    "    dose_dir.mkdir(exist_ok=True)\n",
+    "\n",
     "# for each grain dictionary, if multiple molecules, skip\n",
     "for total_index, (grain_index, grain_data) in enumerate(grains_dictionary.items()):\n",
     "    if total_index >= total_index_to_stop_at:\n",
@@ -388,6 +412,7 @@
     "    filename = grain_data[\"filename\"]\n",
     "    print(f\"grain {grain_index} {filename}\")\n",
     "    pixel_to_nm_scaling = grain_data[\"pixel_to_nm_scaling\"]\n",
+    "    dose = grain_data[\"dose\"]\n",
     "\n",
     "    grains_defects_dictionary[grain_index] = {}\n",
     "\n",
@@ -493,6 +518,7 @@
     "            \"filename\": filename,\n",
     "            \"pixel_to_nm_scaling\": pixel_to_nm_scaling,\n",
     "            \"grain_index\": grain_index,\n",
+    "            \"dose\": dose,\n",
     "            \"molecule_index\": molecule_index,\n",
     "            \"curvature_defects_indexes\": curvature_defects_indexes,\n",
     "            \"height_defects_indexes\": height_defects_indexes,\n",
@@ -508,6 +534,8 @@
     "        defect_stats_list.append(\n",
     "            {\n",
     "                \"grain_index\": grain_index,\n",
+    "                \"filename\": filename,\n",
+    "                \"dose\": dose,\n",
     "                \"smallest_bounding_area\": grain_data[\"smallest_bounding_area\"],\n",
     "                \"aspect_ratio\": grain_data[\"aspect_ratio\"],\n",
     "                \"total_contour_length\": grain_data[\"total_contour_length\"],\n",
@@ -584,7 +612,7 @@
     "\n",
     "        # save the figure\n",
     "        fig.savefig(\n",
-    "            defect_stats_dir / f\"grain_{grain_index}_mol{molecule_index}_defects.png\",\n",
+    "            defect_stats_dir / f\"{dose}GY\" / f\"grain_{grain_index}_mol{molecule_index}_defects.png\",\n",
     "            dpi=200,\n",
     "        )\n",
     "        plt.close(fig)\n",
@@ -651,13 +679,37 @@
     "    color=\"lightgrey\",\n",
     ")\n",
     "plt.ylabel(\"Total Contour Length (nm)\")\n",
+    "plt.show()\n",
+    "\n",
+    "# dose vs number of curvature defects\n",
+    "sns.stripplot(data=defect_stats_df, x=\"dose\", y=\"num_curvature_defects\", color=\"black\", alpha=0.5)\n",
+    "sns.violinplot(\n",
+    "    data=defect_stats_df,\n",
+    "    x=\"dose\",\n",
+    "    y=\"num_curvature_defects\",\n",
+    "    color=\"lightgrey\",\n",
+    ")\n",
+    "plt.xlabel(\"Dose (Gy)\")\n",
+    "plt.ylabel(\"Number of Curvature Defects\")\n",
+    "plt.show()\n",
+    "\n",
+    "# dose vs number of height defects\n",
+    "sns.stripplot(data=defect_stats_df, x=\"dose\", y=\"num_height_defects\", color=\"black\", alpha=0.5)\n",
+    "sns.violinplot(\n",
+    "    data=defect_stats_df,\n",
+    "    x=\"dose\",\n",
+    "    y=\"num_height_defects\",\n",
+    "    color=\"lightgrey\",\n",
+    ")\n",
+    "plt.xlabel(\"Dose (Gy)\")\n",
+    "plt.ylabel(\"Number of Height Defects\")\n",
     "plt.show()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "topo-unet",
+   "display_name": "topostats",
    "language": "python",
    "name": "python3"
   },
