change to IQR based height defect detection

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -389,7 +389,7 @@
     "curvature_rolling_window_size = int(curvature_average_window_nm / interval_nm)\n",
     "\n",
     "curvature_threshold_radpernm = 0.15  # radians/nm\n",
-    "height_threshold_nm = 2.0  # nm\n",
+    "height_threshold_iqr_factor = 1.5  # IQR factor for height threshold\n",
     "\n",
     "total_index_to_stop_at = 10000\n",
     "\n",
@@ -459,6 +459,11 @@
     "        curvature_defects_indexes = np.where(np.abs(smoothed_curvatures) > curvature_threshold_radpernm)[0]\n",
     "\n",
     "        # Find height dips\n",
+    "        # calculate height threshold by taking the median height and subtracting the 1.5 * interquartile range\n",
+    "        median_height = np.median(resampled_heights)\n",
+    "        q75, q25 = np.percentile(resampled_heights, [75, 25])\n",
+    "        iqr = q75 - q25\n",
+    "        height_threshold_nm = median_height - height_threshold_iqr_factor * iqr\n",
     "        height_defects_indexes = np.where(resampled_heights < height_threshold_nm)[0]\n",
     "\n",
     "        # defects are currently in form [defect_index1, defect_index2, ...]\n",
