[refactor] break out resampling into its own iterative function

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -145,29 +145,7 @@
     "all_stats_df = pd.read_csv(all_stats_csv)\n",
     "print(all_stats_df.columns)\n",
     "\n",
-    "all_stats_df[\"total_contour_length\"] /= 1e-9\n",
-    "\n",
-    "\n",
-    "# all_data = {}\n",
-    "# for topo_file in topo_files:\n",
-    "#     file_data = load_topostats(topo_file)\n",
-    "#     print(file_data.keys())\n",
-    "\n",
-    "#     try:\n",
-    "#         all_data[topo_file.name] = {\n",
-    "#             \"image\": file_data[\"image\"],\n",
-    "#             \"grain_tensors\": file_data[\"grain_tensors\"],\n",
-    "#             \"p2nm\": file_data[\"pixel_to_nm_scaling\"],\n",
-    "#             \"curvature_stats\": file_data[\"grain_curvature_stats\"],\n",
-    "#             \"splining\": file_data[\"splining\"],\n",
-    "#         }\n",
-    "#     except KeyError as e:\n",
-    "#         if \"curvature_stats\" in str(e):\n",
-    "#             pass\n",
-    "#         elif \"grain_tensors\" in str(e):\n",
-    "#             pass\n",
-    "#         else:\n",
-    "#             raise e"
+    "all_stats_df[\"total_contour_length\"] /= 1e-9"
    ]
   },
   {
@@ -229,6 +207,10 @@
     "                dose_match = re.search(r\"dose_(\\d+\\.?\\d*)\", basename)\n",
     "                assert dose_match is not None, f\"could not find dose in basename {basename}\"\n",
     "                dose = float(dose_match.group(1))\n",
+    "                # find tip number, an integer in format \"tip_x\"\n",
+    "                tip_match = re.search(r\"tip_(\\d+)\", filename)\n",
+    "                assert tip_match is not None, f\"could not find tip in basename {filename}\"\n",
+    "                tip = int(tip_match.group(1))\n",
     "                # if basename is nan, skip grain\n",
     "                smallest_bounding_area = all_stats_grain[\"smallest_bounding_area\"].values[0]\n",
     "                aspect_ratio = all_stats_grain[\"aspect_ratio\"].values[0]\n",
@@ -291,6 +273,7 @@
     "                full_grain_mask = file_data[\"grain_tensors\"][\"above\"]\n",
     "                grains_dictionary[grain_index][\"basename\"] = basename\n",
     "                grains_dictionary[grain_index][\"dose\"] = dose\n",
+    "                grains_dictionary[grain_index][\"tip\"] = tip\n",
     "                grains_dictionary[grain_index][\"image\"] = image_crop\n",
     "                grains_dictionary[grain_index][\"full_image\"] = image\n",
     "                grains_dictionary[grain_index][\"bbox\"] = bbox_padded\n",
@@ -389,7 +372,7 @@
     "curvature_rolling_window_size = int(curvature_average_window_nm / interval_nm)\n",
     "\n",
     "curvature_threshold_radpernm = 0.15  # radians/nm\n",
-    "height_threshold_iqr_factor = 1.5  # IQR factor for height threshold\n",
+    "height_threshold_iqr_factor = 3.0  # IQR factor for height threshold\n",
     "\n",
     "total_index_to_stop_at = 10000\n",
     "\n",
@@ -621,6 +604,75 @@
     "            dpi=200,\n",
     "        )\n",
     "        plt.close(fig)\n",
+    "\n",
+    "def grains_dictionary_resample_points(\n",
+    "    grains_dictionary: dict,\n",
+    "    interval_nm: float = 2.0,\n",
+    "    total_index_to_stop_at: int | None = None,\n",
+    "    curvature_average_window_nm: float = 10.0,\n",
+    ") -> dict:\n",
+    "    # Iterate through the grains dictionary\n",
+    "    for total_index, (grain_index, grain_data) in enumerate(grains_dictionary.items()):\n",
+    "        if total_index_to_stop_at is not None and total_index >= total_index_to_stop_at:\n",
+    "            break\n",
+    "\n",
+    "        pixel_to_nm_scaling = grain_data[\"pixel_to_nm_scaling\"]\n",
+    "        \n",
+    "        # Iterate through each molecule in the grain\n",
+    "        for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
+    "\n",
+    "            circular = molecule_data[\"circular\"]\n",
+    "            if not circular:\n",
+    "                print(f\"  molecule {molecule_index} is not circular, skipping\")\n",
+    "                continue\n",
+    "\n",
+    "            spline_coords = molecule_data[\"spline_coords\"]\n",
+    "            resampled_points = resample_points_regular_interval(\n",
+    "                points=spline_coords, interval=interval_nm / pixel_to_nm_scaling, circular=True\n",
+    "            )\n",
+    "\n",
+    "            # resample distances and curvatures\n",
+    "            resampled_distances = np.linalg.norm(resampled_points[1:, :] - resampled_points[:-1, :], axis=1)\n",
+    "            # add the distance from the last point to the first point\n",
+    "            resampled_distances = np.insert(\n",
+    "                resampled_distances, 0, np.linalg.norm(resampled_points[0, :] - resampled_points[-1, :])\n",
+    "            )\n",
+    "            cumulative_resampled_distances = np.cumsum(resampled_distances)\n",
+    "            resampled_curvatures = discrete_angle_difference_per_nm_circular(\n",
+    "                trace_nm=resampled_points * pixel_to_nm_scaling\n",
+    "            )\n",
+    "\n",
+    "            # smooth curvatures using rolling window\n",
+    "            curvature_rolling_window_size = int(curvature_average_window_nm / interval_nm)\n",
+    "            smoothed_curvatures = np.convolve(\n",
+    "                resampled_curvatures, np.ones(curvature_rolling_window_size), mode=\"same\"\n",
+    "            )\n",
+    "            smoothed_curvatures = smoothed_curvatures / curvature_rolling_window_size\n",
+    "\n",
+    "            # grab height values at resampled points\n",
+    "            resampled_heights = np.zeros(resampled_points.shape[0])\n",
+    "            for i, point in enumerate(resampled_points):\n",
+    "                int_x = int(np.round(point[0]))\n",
+    "                int_y = int(np.round(point[1]))\n",
+    "                height = grain_data[\"image\"][int_x, int_y]\n",
+    "                resampled_heights[i] = height\n",
+    "            \n",
+    "            # update the molecule data with the resampled data\n",
+    "            molecule_data[\"resampled_points\"] = resampled_points\n",
+    "            molecule_data[\"cumulative_resampled_distances\"] = cumulative_resampled_distances\n",
+    "            molecule_data[\"resampled_heights\"] = resampled_heights\n",
+    "            molecule_data[\"resampled_curvatures\"] = resampled_curvatures\n",
+    "            molecule_data[\"smoothed_curvatures\"] = smoothed_curvatures\n",
+    "            # update the grain data with the resampled molecule data\n",
+    "            grain_data[\"molecule_data\"][molecule_index] = molecule_data\n",
+    "    return grains_dictionary\n",
+    "\n",
+    "grains_dictionary = grains_dictionary_resample_points(\n",
+    "    grains_dictionary=grains_dictionary,\n",
+    "    interval_nm=interval_nm,\n",
+    "    total_index_to_stop_at=total_index_to_stop_at,\n",
+    "    curvature_average_window_nm=curvature_average_window_nm,\n",
+    ")\n",
     "\n",
     "# save the defect stats to a csv\n",
     "defect_stats_df = pd.DataFrame(defect_stats_list)\n",
