--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -374,6 +374,7 @@
     "    total_index_to_stop_at: int | None = None,\n",
     "    curvature_average_window_nm: float = 10.0,\n",
     ") -> dict:\n",
+    "    new_grains_dictionary = {}\n",
     "    # Iterate through the grains dictionary\n",
     "    for total_index, (grain_index, grain_data) in enumerate(grains_dictionary.items()):\n",
     "        if total_index_to_stop_at is not None and total_index >= total_index_to_stop_at:\n",
@@ -431,7 +432,9 @@
     "            molecule_data[\"smoothed_curvatures\"] = smoothed_curvatures\n",
     "            # update the grain data with the resampled molecule data\n",
     "            grain_data[\"molecule_data\"][molecule_index] = molecule_data\n",
-    "    return grains_dictionary\n",
+    "        # update the grains dictionary with the resampled grain data\n",
+    "        new_grains_dictionary[grain_index] = grain_data\n",
+    "    return new_grains_dictionary\n",
     "\n",
     "\n",
     "def find_defects_in_height_and_curvature(\n",
@@ -445,13 +448,16 @@
     "    \"\"\"\n",
     "    Find defects in height and curvature for each molecule in the grains dictionary.\n",
     "    \"\"\"\n",
+    "    new_grains_dictionary = {}\n",
     "    # create a list to store the defect stats\n",
     "    defect_stats_list = []\n",
+    "    bad_grains = set()\n",
     "    for grain_index, grain_data in grains_dictionary.items():\n",
     "        print(f\"grain {grain_index}\")\n",
     "        dose = grain_data[\"dose\"]\n",
     "        image = grain_data[\"image\"]\n",
     "        filename = grain_data[\"filename\"]\n",
+    "        grain_bad = False\n",
     "        for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
     "            resampled_points = molecule_data[\"resampled_points\"]\n",
     "            resampled_heights = molecule_data[\"resampled_heights\"]\n",
@@ -482,7 +488,9 @@
     "                num_curvature_defects -= 1\n",
     "                if num_curvature_defects < 0:\n",
     "                    # This happens if the whole trace is a defect\n",
-    "                    num_curvature_defects = 0\n",
+    "                    print(f\" Bad grain: {grain_index} molecule: {molecule_index}: num_curvature_defects < 0\")\n",
+    "                    grain_bad = True\n",
+    "                    break\n",
     "            num_height_defects = 0\n",
     "            for i in range(1, len(height_defects_bool)):\n",
     "                if height_defects_bool[i] and not height_defects_bool[i - 1]:\n",
@@ -598,7 +606,16 @@
     "                )\n",
     "                plt.close(fig)\n",
     "\n",
-    "    return grains_dictionary, pd.DataFrame(defect_stats_list)\n",
+    "        if grain_bad:\n",
+    "            bad_grains.add(grain_index)\n",
+    "            continue\n",
+    "\n",
+    "        # update the new grains dictionary with the grain data\n",
+    "        new_grains_dictionary[grain_index] = grain_data\n",
+    "\n",
+    "    print(f\"bad grains: {bad_grains}\")\n",
+    "\n",
+    "    return new_grains_dictionary, pd.DataFrame(defect_stats_list)\n",
     "\n",
     "\n",
     "interval_nm = 2.0  # nm\n",
