[refactor] formatting outputs

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -453,7 +453,7 @@
     "    defect_stats_list = []\n",
     "    bad_grains = set()\n",
     "    for grain_index, grain_data in grains_dictionary.items():\n",
-    "        print(f\"grain {grain_index}\")\n",
+    "        print(f\"g{grain_index}\", end=\" \")\n",
     "        dose = grain_data[\"dose\"]\n",
     "        image = grain_data[\"image\"]\n",
     "        filename = grain_data[\"filename\"]\n",
@@ -488,7 +488,7 @@
     "                num_curvature_defects -= 1\n",
     "                if num_curvature_defects < 0:\n",
     "                    # This happens if the whole trace is a defect\n",
-    "                    print(f\" Bad grain: {grain_index} molecule: {molecule_index}: num_curvature_defects < 0\")\n",
+    "                    print(f\"\\n[Bad grain: {grain_index} molecule: {molecule_index}: num_curvature_defects < 0]\")\n",
     "                    grain_bad = True\n",
     "                    break\n",
     "            num_height_defects = 0\n",
@@ -613,6 +613,7 @@
     "        # update the new grains dictionary with the grain data\n",
     "        new_grains_dictionary[grain_index] = grain_data\n",
     "\n",
+    "    print(\"\")\n",
     "    print(f\"bad grains: {bad_grains}\")\n",
     "\n",
     "    return new_grains_dictionary, pd.DataFrame(defect_stats_list)\n",
